[project]
name = "epopee-des-cites-perdues"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "psycopg[binary]>=3.3.3",
    "pytest>=9.0.2",
    "questionary>=2.1.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
